model team user macth created

--- a/src/pages/teams/teams.scss
+++ b/src/pages/teams/teams.scss
@@ -1,3 +1,13 @@
 page-teams {
-
+    .addButtonfab {
+        right: 8% !important;
+        bottom: 0px;
+    }
+    .addButton {
+        right: 0!important;
+        background-color: color($colors, light);
+        &:active{
+            background-color: color($colors, dark);
+        }
+    }
 }
