--- a/src/pages/teams/teams.scss
+++ b/src/pages/teams/teams.scss
@@ -5,9 +5,9 @@ page-teams {
     }
     .addButton {
         right: 0!important;
-        background-color: color($colors, light);
+        background-color: color($colors, dark);
         &:active{
-            background-color: color($colors, dark);
+            background-color: color($colors, secondary);
         }
     }
 }
