--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -18,4 +18,7 @@ page-profile {
         font-size: 14px;
         color: color($colors, primary);
     }
+    .icoSubir{
+        padding-right: 10px;
+    }
 }
