--- a/src/pages/calendar-match/calendar-match.scss
+++ b/src/pages/calendar-match/calendar-match.scss
@@ -1,4 +1,25 @@
 page-calendar-match {
+  ion-item{
+   // padding: 0 !important;
+  }
+    .Disponible{
+      display: inline;
+      right: 5px;
+      top: -5px;
+      position: relative;
+    }
+    .Disponible2{
+      display: inline;
+      right: 15px;
+      top: -5px;
+      position: relative;
+    }
+    .Disponible3{
+      display: inline;
+      right: 25px;
+      top: -5px;
+      position: relative;
+    }
     ion-grid,.calendar-header{
         box-shadow: inset 0 0 7px #000000 !important;
     }
@@ -6,11 +27,34 @@ page-calendar-match {
         background-color: color($colors, light);
         box-shadow: inset 0 0 1px #000000 !important;
         margin: 5px;
+        padding-bottom: 6px !important;
+        border-radius: 4px;
+        border: 1px solid color($colors, light);
     }
+    .hour2{
+      background-color: color($colors, light);
+      box-shadow: inset 0 0 1px #000000 !important;
+      margin: 5px;
+      padding-bottom: 6px !important;
+      border-radius: 4px;
+      border: 1px solid color($colors, light);
+  }
+  .hour3{
+    background-color: color($colors, light);
+    box-shadow: inset 0 0 1px #000000 !important;
+    margin: 5px;
+    padding-bottom: 6px;
+    border-radius: 4px;
+    border: 1px solid color($colors, light);
+    padding-bottom: 6px !important;
+}
     .head{
         margin-top: 30px;
-        background-color:  lightblue;
+        background-color:  color($colors, lightColor);
         box-sizing: border-box;
+        color: color($colors, light);
+        border: 1px solid color($colors, primary);
+        border-radius: 5px;
     }
 
 
@@ -37,6 +81,9 @@ page-calendar-match {
         font-weight: bold;
         background-color: color($colors, primary);
         color: white;
+        
+        border: 1px solid color($colors, primary);
+        border-radius: 5px;
        // border-radius: 30px;
       }
       .calendar-header {
