--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,7 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  ligthColor :#8187ff,
+  lightColor :#8187ff,
   darkColor:  #0031ca,
   dark:       #222,
   dark-light: #222
