estable 0.1.2 con google

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -5,11 +5,11 @@ page-profile {
         border-radius: 50%;
     }
     .perfilName{
-        margin-top: 16px; 
+        margin-top: 26px; 
     }
     .backimg{
        //background-color:color($colors, light);
-       background-color: aquamarine;
+       background-color:color($colors, lightColor);
        margin: -16px; 
        padding: 6px 0px;
        padding-top: 10px;
