--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,21 @@
-<ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
+<ion-menu [content]="content" class="my-sidemenu" type="push" side="left">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+  
+    <ion-content>
+      <ion-list>
+        <button menuClose ion-item *ngFor="let p of pages" 
+        (click)="openPage(p)"
+         [class.active]="checkActivePage(p)">
+          <ion-icon name="{{p.icon}}" item-left></ion-icon>
+          {{p.title}}
       </button>
-    </ion-list>
-  </ion-content>
-
-</ion-menu>
-
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+      </ion-list>
+    </ion-content>
+  
+  </ion-menu>
+  
+  <ion-nav [root]="rootPage" #content swipeBackEnabled="false" class="my-navbar"></ion-nav>
