--- a/src/pages/detail-team/detail-team.scss
+++ b/src/pages/detail-team/detail-team.scss
@@ -3,4 +3,15 @@ page-detail-team {
         top: 3px;
         position: absolute;
     }
+    .nom{
+        font-size: 14px;
+       // padding: 0;
+    }
+    .estate{
+        right: -50px;
+        top: -10px;
+        position: absolute;
+        //size: 20px;
+       // font-size: 16px;
+    }
 }
