--- a/src/pages/calendar-match/calendar-match.scss
+++ b/src/pages/calendar-match/calendar-match.scss
@@ -4,9 +4,9 @@ page-calendar-match {
   }
     .Disponible{
       display: inline;
-      right: 5px;
-      top: -5px;
-      position: relative;
+      right: 0px;
+      top: 6px;
+      position: absolute;
     }
     .Disponible2{
       display: inline;
@@ -27,7 +27,7 @@ page-calendar-match {
         background-color: color($colors, light);
         box-shadow: inset 0 0 1px #000000 !important;
         margin: 5px;
-        padding-bottom: 6px !important;
+        padding: 12px !important;
         border-radius: 4px;
         border: 1px solid color($colors, light);
     }
