--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -64,7 +64,7 @@
           //  background-image: url('./../assets/imgs/fondo2.jpg') !important;
             background-position: center !important;
             background-size: cover !important;
-            background-color:color($colors, primary);
+            background-color:color($colors, lightColor);
            
       }
      
