--- a/src/pages/calendar-match/calendar-match.scss
+++ b/src/pages/calendar-match/calendar-match.scss
@@ -8,6 +8,12 @@ page-calendar-match {
       top: 6px;
       position: absolute;
     }
+    .Ocupado{
+      display: inline;
+      right: 0px;
+      top: 6px;
+      position: absolute;
+    }
     .Disponible2{
       display: inline;
       right: 15px;
