--- a/src/pages/history-matchs/history-matchs.scss
+++ b/src/pages/history-matchs/history-matchs.scss
@@ -1,3 +1,27 @@
 page-history-matchs {
-
+    .h5cans{
+      //  display: inline;
+    }
+    .hour{
+        background-color: color($colors, light);
+        box-shadow: inset 0 0 2px #000000 !important;
+        margin: 2px;
+        padding: 6px !important;
+        border-radius: 4px;
+        border: 1px solid color($colors, light);
+    }
+    .disp{
+       // text-align: end;
+        
+    }
+    .disp,.product-name{
+        text-align: end;
+        padding-left: 30px;
+        //position: absolute;
+    }
+    .people{
+        padding-right: 5px;
+    }
 }
+
+
