--- a/src/pages/history-matchs/history-matchs.scss
+++ b/src/pages/history-matchs/history-matchs.scss
@@ -1,6 +1,8 @@
 page-history-matchs {
-    .h5cans{
-      //  display: inline;
+    .seeTeam{
+        right: -21px;
+        top: 30px;
+        position: absolute;
     }
     .hour{
         background-color: color($colors, light);
