--- a/src/pages/detail-field/detail-field.scss
+++ b/src/pages/detail-field/detail-field.scss
@@ -3,7 +3,10 @@ page-detail-field {
     agm-map {
         height: 300px;
       }
-      img{
+      img,ion-slides{
         height: 300px;
+      }
+      ion-title{
+            margin-left: -21px !important;
       }
 }
