--- a/src/pages/history-matchs/history-matchs.scss
+++ b/src/pages/history-matchs/history-matchs.scss
@@ -4,13 +4,21 @@ page-history-matchs {
         top: 30px;
         position: absolute;
     }
-    .hour{
+    .Disponible{
+        text-align: center;
         background-color: color($colors, light);
-        box-shadow: inset 0 0 2px #000000 !important;
-        margin: 2px;
-        padding: 6px !important;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 4px;
         border-radius: 4px;
-        border: 1px solid color($colors, light);
+    }
+    .hour{
+      //  background-color: color($colors, light);
+      //  box-shadow: inset 0 0 2px #000000 !important;
+       // margin: 2px;
+       // padding: 6px !important;
+       // border-radius: 4px;
+       // border: 1px solid color($colors, light);
     }
     .disp{
        // text-align: end;
