--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,35 @@
 page-home {
-
+    .seeTeam{
+        right: -21px;
+        top: 30px;
+        position: absolute;
+    }
+    .Disponible{
+        text-align: center;
+        background-color: color($colors, light);
+        margin-left: auto;
+        margin-right: auto;
+        padding: 4px;
+        border-radius: 4px;
+    }
+    .hour{
+      //  background-color: color($colors, light);
+      //  box-shadow: inset 0 0 2px #000000 !important;
+       // margin: 2px;
+       // padding: 6px !important;
+       // border-radius: 4px;
+       // border: 1px solid color($colors, light);
+    }
+    .disp{
+       // text-align: end;
+        
+    }
+    .disp,.product-name{
+        text-align: end;
+        padding-left: 30px;
+        //position: absolute;
+    }
+    .people{
+        padding-right: 5px;
+    }
 }
