--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,7 +6,7 @@ page-home {
     }
     .Disponible{
         text-align: center;
-        background-color: color($colors, light);
+       // background-color: color($colors, light);
         margin-left: auto;
         margin-right: auto;
         padding: 4px;
